# meal-planner-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: add-tool.md  extend.md
.claude/hooks/: lint-changed.sh
data/: recipes.seed.json
src/mealplanner/: __init__.py  cli.py  core.py  exports.py  ingredients.py  models.py  planner.py  server.py  store.py
tests/: conftest.py  test_cli.py  test_core.py  test_ingredients.py  test_planner.py  test_server_imports.py  test_server_tools.py  test_store.py
