[project]
name = "meal-planner-mcp"
version = "0.1.0"
description = "Self-contained MCP server that plans a week of meals from a local recipe library — optimizing ingredient overlap, reusing leftovers, and avoiding recent repeats."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Megan Schott" }]
dependencies = ["mcp>=1.0"]

[project.scripts]
# After `pip install -e .` you can launch the server as `meal-planner`
# (no PYTHONPATH needed) — handy for the Claude Desktop config.
meal-planner = "mealplanner.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mealplanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
